force-app/main/default/objects/Integration_Status__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Name</label>
    <type>TextArea</type>
</CustomField>