force-app/main/default/objects/Integration_Status__c/fields/Time_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_Job_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Job Completed</label>
    <type>DateTime</type>
</CustomField>