force-app/main/default/objects/Integration_Status__c/fields/Time_Job_Started__c.field-meta.xml
<CustomField>
    <fullName>Time_Job_Started__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Job Started</label>
    <type>DateTime</type>
</CustomField>